--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Starter",
+  "name": "Remolacha",
   "version": "1.0.0",
-  "description": "Starter pack yo!",
+  "description": "La re mo la cha cha cha",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,14 +10,17 @@
   "author": "lct",
   "license": "MIT",
   "dependencies": {
-    "browserify": "^10.2.0",
-    "browserify-middleware": "^7.0.0",
-    "express": "~4.5.1",
-    "figlet": "^1.1.0",
-    "jade": "~1.3.1",
-    "nib": "~1.0.3",
-    "stringify": "^3.1.0",
-    "stylus": "~0.47.1"
+    "browserify": "*",
+    "browserify-middleware": "*",
+    "express": "*",
+    "figlet": "*",
+    "jade": "*",
+    "nib": "*",
+    "simplex-noise": "^2.3.0",
+    "stringify": "*",
+    "stylus": "*",
+    "three": "^0.84.0",
+    "three-orbit-controls": "^82.1.0"
   },
   "devDependencies": {},
   "engines": {
