added color selectors

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "Remolacha",
   "version": "1.0.0",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/santi-grau/remolacha"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/santi-grau/remolacha"
   },
   "description": "La re mo la cha cha cha",
   "main": "main.js",
@@ -17,6 +17,7 @@
   "dependencies": {
     "browserify": "*",
     "browserify-middleware": "*",
+    "chroma-js": "^1.2.2",
     "dat-gui": "^0.5.0",
     "express": "*",
     "figlet": "*",
