--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dat-gui": "^0.5.0",
     "express": "*",
     "figlet": "*",
+    "gsap": "^1.19.1",
     "jade": "*",
     "matter-js": "^0.12.0",
     "nib": "*",
@@ -28,7 +29,8 @@
     "stringify": "*",
     "stylus": "*",
     "three": "^0.84.0",
-    "three-orbit-controls": "^82.1.0"
+    "three-orbit-controls": "^82.1.0",
+    "ws": "^2.2.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
