--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.17.1",
     "browserify": "*",
     "browserify-middleware": "*",
+    "cors": "^2.8.1",
     "dat-gui": "^0.5.0",
     "express": "*",
     "figlet": "*",
