--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "stringify": "*",
     "stylus": "*",
     "three": "^0.84.0",
+    "webworkify": "^1.4.0",
     "ws": "1.1.0"
   },
   "devDependencies": {
