--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dat-gui": "^0.5.0",
     "express": "*",
     "figlet": "*",
+    "gsap": "^1.19.1",
     "jade": "*",
     "matter-js": "^0.12.0",
     "nib": "*",
