--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
   "author": "lct",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.17.1",
     "browserify": "*",
     "browserify-middleware": "*",
-    "cors": "^2.8.1",
     "dat-gui": "^0.5.0",
     "express": "*",
     "figlet": "*",
@@ -32,8 +30,7 @@
     "stringify": "*",
     "stylus": "*",
     "three": "^0.84.0",
-    "webworkify": "^1.4.0",
-    "ws": "1.1.0"
+    "webworkify": "^1.4.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
