--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "grunt build && mkdir -p docs/js && ./node_modules/browserify/bin/cmd.js  -t [ stringify --extensions [.obj .svg .glsl] ]  app/js/main.js > docs/js/main.js",
-    "winbuild": "grunt build && chdir docs && mkdir js && cd .. && ./node_modules/browserify/bin/cmd.js  -t [ stringify --extensions [.obj .svg .glsl] ]  app/js/main.js > docs/js/main.js",
+    "build": "grunt build && mkdir -p docs/js && ./node_modules/browserify/bin/cmd.js  -t [ stringify --extensions [.obj .svg .glsl] ]  app/js/main.js | uglifyjs > docs/js/main.js",
     "start": "node main.js"
   },
   "keywords": [],
